[gd_scene load_steps=2 format=3 uid="uid://dnao5uvbxwjvh"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_main_menu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main_menu")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.3, 0.4, 1)

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="MenuContainer"]
layout_mode = 2
text = "SKRIPSI SIMULATOR"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Space1" type="Control" parent="MenuContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="NewGameButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "New Game"

[node name="ContinueButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "Continue"

[node name="ExitButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "Exit"
